# promptic

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  justfile  promptic.py  pyproject.toml  script.py
.claude/: settings.local.json
.github/workflows/: check.yml  create-release.yml  pre-commit.yml  publish-to-pypi.yml  tests.yml
docs/: README.md  mdx-components.tsx  package-lock.json  package.json  vcr_migration.md  vcr_usage.md
docs/app/: global.css  layout.tsx
docs/app/docs/: layout.tsx
docs/components/markdown/: markdown-container.tsx  markdown-heading-with-link.tsx
docs/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  callout.tsx  card.tsx  carousel.tsx  checkbox.tsx  codeblock.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toggle-group.tsx  (+2 more)
docs/content/docs/: agents.mdx  api-reference.mdx  authentication.mdx  error-handling.mdx  introduction.mdx  limitations.mdx  memory-state.mdx  meta.json  streaming.mdx  structured-outputs.mdx
docs/public/: siteConfig.ts
examples/: api_ref.py  basic.py  book_meeting.py  caching.py  direct_messaging.py  error_handing.py  gradio.py  image_support.py  json_schema.py  langfuse_openai.py  memory.py  resiliency.py  state.py  streaming.py  structured.py  use_tools.py  use_tools_structured.py  weave_integration.py
tests/: conftest.py  test_promptic.py
tests/cassettes/: README.md
tests/cassettes/test_promptic/: test_agents[completion-claude-3-5-haiku-20241022].yaml  test_agents[completion-gemini-gemini-2.0-flash].yaml  test_agents[completion-gpt-4o-mini].yaml  test_agents[create-gpt-4o-mini].yaml  test_anthropic_cache_limit[completion-claude-3-5-haiku-20241022].yaml  test_basic[completion-claude-3-5-haiku-20241022].yaml  test_basic[completion-gemini-gemini-2.0-flash].yaml  test_basic[completion-gpt-4o-mini].yaml  test_basic[create-gpt-4o-mini].yaml  test_cache_control[completion-claude-3-5-haiku-20241022].yaml  test_cache_with_system_prompts[completion-claude-3-5-haiku-20241022].yaml  test_clear_state[completion-claude-3-5-haiku-20241022].yaml  test_clear_state[completion-gemini-gemini-2.0-flash].yaml  test_clear_state[completion-gpt-4o-mini].yaml  test_clear_state[create-gpt-4o-mini].yaml  test_completion_method[completion-claude-3-5-haiku-20241022].yaml  test_completion_method[completion-gemini-gemini-2.0-flash].yaml  test_completion_method[completion-gpt-4o-mini].yaml  test_completion_method[create-gpt-4o-mini].yaml  test_custom_state[completion-claude-3-5-haiku-20241022].yaml  test_custom_state[completion-gemini-gemini-2.0-flash].yaml  test_custom_state[completion-gpt-4o-mini].yaml  test_custom_state[create-gpt-4o-mini].yaml  test_debug_logging[completion-claude-3-5-haiku-20241022].yaml  test_debug_logging[completion-gemini-gemini-2.0-flash].yaml  test_debug_logging[completion-gpt-4o-mini].yaml  test_debug_logging[create-gpt-4o-mini].yaml  (+96 more)
(+1 files in other folders)
