[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Stephan Fitzpatrick", email = "stephan@knowsuchagency.com"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
description = "90% of what you need for LLM app development. Nothing you don't."
license = {file = "LICENSE"}
name = "promptic"
dependencies = [
  "litellm~=1.38",
  "pydantic~=2.7",
]
version = "1.4.1"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Home = "https://github.com/knowsuchagency/promptic"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
